[package]
name = "whaterror"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Customizable handling for fallible main"
readme = "README.md"
repository = "https://github.com/leo60228/whaterror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whaterror_macros = { path = "../whaterror_macros", version = "0.1.0" }
