[package]
name = "whaterror_macros"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for whaterror"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
