[package]
name = "whaterror_macros"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for whaterror"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.38"
whaterror = { path = "../whaterror" }
